--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div>
         <div id="first">
         <div id="logo">
-        <img width="60px" src="../../HTML/AliBaba Clone/Asset/Alibaba.webp" alt="Alibabalogo">
+        <img width="60px" src="../AliBaba Clone/Asset/Alibaba.webp" alt="Alibabalogo">
         <h1>Alibaba.com</h1>
         </div>
         <input type="text" placeholder="What are you looking for?" >
